--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 	id "io.freefair.lombok" version "5.3.0"
 }
 
-group = 'com.example'
+group = 'com.peixoto.api'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
@@ -16,6 +16,8 @@ repositories {
 }
 
 dependencies {
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.4.4'
+
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation group: 'io.rest-assured', name: 'spring-mock-mvc', version: '4.0.0'
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
