--- a/build.gradle
+++ b/build.gradle
@@ -16,11 +16,22 @@ repositories {
 }
 
 dependencies {
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.4.4'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.4.4'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '2.4.4'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.4.4'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.4.4'
+	implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.4.1.Final'
 
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+
+
+
 	testImplementation group: 'io.rest-assured', name: 'spring-mock-mvc', version: '4.0.0'
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.26'
+
+
 
 	compileOnly 'org.projectlombok:lombok:1.18.16'
 	annotationProcessor 'org.projectlombok:lombok:1.18.16'
