--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 
 
 
-
+	testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.20.2'
 	testImplementation group: 'io.rest-assured', name: 'spring-mock-mvc', version: '4.0.0'
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.26'
