--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,10 @@ jobs:
       run: chmod +x gradlew
       
     - name: Build with Gradle
-      run: ./gradlew clean build -x test
+      run: ./gradlew clean build -x test -x integrationTest
       
-    - name: Run Tests
+    - name: Unit Tests
       run: ./gradlew test
+
+    - name: Integration Tests
+      run: ./gradlew integrationTest
