exclude integrationTest tag from test task

--- a/build.gradle
+++ b/build.gradle
@@ -88,7 +88,9 @@ dependencies {
 }
 
 test {
-	useJUnitPlatform()
+	useJUnitPlatform() {
+		excludeTags 'integrationTest'
+	}
 	testLogging {
 		events "passed", "skipped", "failed"
 	}
