--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       run: ./gradlew clean build -x test -x integrationTest
       
     - name: Unit Tests
-      run: ./gradlew test
+      run: ./gradlew test -x integrationTest
 
     - name: Integration Tests
       run: ./gradlew integrationTest
