fix config to ignore class in coverage

--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ def excludeSourceDirs = [
 		'**/handler/**',
 		'**/requests/**',
 		'**/domain/**',
-		'*/TestingWebApplication.java',
+		'**/TestingWebApplication*',
 ]
 
 jacocoTestReport {
