--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,6 @@ plugins {
 	id 'checkstyle'
 	id 'application'
 	id 'idea'
-//	id 'info.solidsoft.pitest' version '1.6.0'
 }
 
 apply plugin: 'jacoco'
@@ -44,7 +43,7 @@ def excludeSourceDirs = [
 ]
 
 jacocoTestReport {
-	dependsOn test
+	dependsOn(test)
 	reports {
 		html.enabled true
 
@@ -59,7 +58,7 @@ jacocoTestReport {
 
 test.finalizedBy jacocoTestCoverageVerification
 jacocoTestCoverageVerification {
-	dependsOn jacocoTestReport
+	dependsOn(jacocoTestReport)
 	violationRules {
 		rule {
 			limit {
@@ -92,7 +91,7 @@ dependencies {
 	testCompile 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.4.0'
 
 	testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner'
-	testImplementation('org.springframework.boot:spring-boot-starter-test')
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation group: 'org.springframework.security', name: 'spring-security-test', version: '5.5.1'
 	testImplementation "com.h2database:h2"
 	testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.20.2'
