--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,6 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -27,7 +26,8 @@ jobs:
       
     - name: Build with Gradle
       run: ./gradlew clean build -x test -x integrationTest
-      
+
+  Tests:
     - name: Unit Tests
       run: ./gradlew test -x integrationTest
 
