--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,21 @@ jobs:
       run: ./gradlew clean build -x test -x integrationTest
 
   Tests:
-    - name: Unit Tests
-      run: ./gradlew test -x integrationTest
+    runs-on: ubuntu-latest
 
-    - name: Integration Tests
-      run: ./gradlew integrationTest
+      steps:
+        - uses: actions/checkout@v2
+        - name: Set up JDK 11
+          uses: actions/setup-java@v2
+          with:
+            java-version: '11'
+            distribution: 'adopt'
+
+        - name: Grant execute permission for gradlew
+          run: chmod +x gradlew
+
+        - name: Unit Tests
+          run: ./gradlew test -x integrationTest
+
+        - name: Integration Tests
+          run: ./gradlew integrationTest
