--- a/src/integrationTest/resources/application-test.yml
+++ b/src/integrationTest/resources/application-test.yml
@@ -14,4 +14,4 @@ spring:
     jpa:
       database-platform: org.hibernate.dialect.H2Dialect
       hibernate:
-        ddl-auto: none
+        ddl-auto: create-drop
