fix coverage report

--- a/gradle/integrationTest.gradle
+++ b/gradle/integrationTest.gradle
@@ -32,6 +32,12 @@ idea {
     }
 }
 
+jacocoTestReport {
+    executionData tasks.withType(Test)
+}
+
+check.dependsOn 'jacocoTestReport'
+
 task integrationTest(type: Test) {
     group = 'verification'
 
@@ -55,3 +61,5 @@ task integrationTest(type: Test) {
     check.dependsOn it
     shouldRunAfter test
 }
+
+check.dependsOn 'integrationTest'
