--- a/build.gradle
+++ b/build.gradle
@@ -24,24 +24,11 @@ apply from: "$rootDir/gradle/integrationTest.gradle"
 check.dependsOn jacocoTestCoverageVerification
 test.finalizedBy jacocoTestReport
 
-def excludeSourceDirs = [
-		'**/config/**',
-		'**/swagger/**',
-		'**/exceptions/**',
-		'**/repository/**',
-		'**/handler/**',
-		'**/requests/**',
-		'**/domain/**',
-		'**/TestingWebApplication*'
-]
-
 tasks.withType(Test) {
 	finalizedBy jacocoTestReport
 }
 
-// Configure the report to look for executionData generated during the test and integrationTest task
 jacocoTestReport {
-//	executionData { tasks.withType(Test).findAll { it.jacoco.destinationFile.exists() }*.jacoco.destinationFile }
 	reports {
 		html.enabled true
 		html.destination file("${project.buildDir}/reports/jacoco/all-tests/html")
@@ -49,11 +36,7 @@ jacocoTestReport {
 }
 
 jacocoTestCoverageVerification {
-	executionData {
-		tasks.withType(Test).findAll {
-			it.jacoco.destinationFile.exists()
-		}*.jacoco.destinationFile
-	}
+	getExecutionData().setFrom(fileTree(buildDir).include("/jacoco/integrationTest.exec"))
 	violationRules {
 		rule {
 			element = 'CLASS'
@@ -73,11 +56,6 @@ jacocoTestCoverageVerification {
 					'com.peixoto.api.swagger.*',
 					'com.peixoto.api.TestingWebApplication*'
 			]
-		}
-		afterEvaluate {
-			classDirectories.setFrom(files(classDirectories.files.collect {
-				fileTree(dir: it, exclude: excludeSourceDirs)
-			}))
 		}
 	}
 }
