Improve way docker works: generate jar and up application

--- a/build.gradle
+++ b/build.gradle
@@ -132,6 +132,6 @@ rootProject.tasks.named("processIntegrationTestResources") {
 }
 
 tasks.withType(Jar) {
-	destinationDir = file("$rootDir/jar")
+	destinationDir = file("$rootDir/build/libs/")
 }
 
