--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle
+name: Build pipeline
 
 on:
   push:
@@ -27,8 +27,9 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew clean build -x test -x integrationTest
 
-  Tests:
+  tests:
     runs-on: ubuntu-latest
+    needs: [ build ]
 
     steps:
       - uses: actions/checkout@v2
