--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,26 +10,41 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
-        
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
+  static-checking:
+    runs-on: ubuntu-latest
+    env:
+      ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+      gradlew: "./gradlew --console=plain -x test -x integrationTest --no-daemon"
       
-    - name: Build with Gradle
-      run: ./gradlew clean build -x test -x integrationTest
-
-  tests:
+    steps:
+      - uses: actions/checkout@v2
+      
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+    
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+          
+      - name: Run checkstyleMain
+        run: |
+          ${gradlew} checkstyleMain
+        
+      - name: Run checkstyleTest
+        run: |
+          ${gradlew} checkstyleTest
+          
+      - name: Run checkstyleIntegrationTest
+        run: |
+          ${gradlew} checkstyleIntegrationTest
+          
+  unit-tests:
     runs-on: ubuntu-latest
-    needs: [ build ]
+    needs: [ static-checking ]
 
     steps:
       - uses: actions/checkout@v2
@@ -44,6 +59,23 @@ jobs:
 
       - name: Unit Tests
         run: ./gradlew test -x integrationTest
+        
+  integration-tests:
+    runs-on: ubuntu-latest
+    needs: [ unit-tests ]
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
       - name: Integration Tests
         run: ./gradlew integrationTest
+        
+        
