--- a/build.gradle
+++ b/build.gradle
@@ -100,6 +100,7 @@ dependencies {
 
 	testCompileOnly 'org.projectlombok:lombok:1.18.16'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
+	integrationTestAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
 }
 
 dependencyManagement {
