--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,101 +1,29 @@
-# This workflow will build a Java project with Gradle
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-
-name: Build pipeline
+name: Goiaba
 
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
-
-  static-checking:
+  laranja:
     runs-on: ubuntu-latest
     env:
       ACTIONS_ALLOW_UNSECURE_COMMANDS: true
-      gradlew: "./gradlew --console=plain -x test -x integrationTest --no-daemon"
-      
-    steps:
-      - uses: actions/checkout@v2
-      
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-    
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-          
-      - name: Run checkstyleMain
-        run: |
-          ${gradlew} checkstyleMain
-        
-      - name: Run checkstyleTest
-        run: |
-          ${gradlew} checkstyleTest
-          
-      - name: Run checkstyleIntegrationTest
-        run: |
-          ${gradlew} checkstyleIntegrationTest
-          
-  unit-tests:
-    runs-on: ubuntu-latest
-    env:
-      ACTIONS_ALLOW_UNSECURE_COMMANDS: true
-      gradlew: "./gradlew --console=plain -x test -x integrationTest --no-daemon"
-    needs: [ static-checking ]
+      gradlew: "./gradlew"
 
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
+      steps:
+        - uses: actions/checkout@v2
 
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
+        - name: Grant execute permission for gradlew
+          run: chmod +x gradlew
 
-      - name: Unit Tests
-        run: ${gradlew} test -x integrationTest
-        
-      - name: Mutation Test
-        run: ${gradlew} pitest
-    
-        
-  integration-tests:
-    runs-on: ubuntu-latest
-    env:
-      ACTIONS_ALLOW_UNSECURE_COMMANDS: true
-      gradlew: "./gradlew --console=plain -x test -x integrationTest --no-daemon"
-    needs: [ unit-tests ]
+        - uses: actions/checkout@v2
+        - name: Set up JDK 11
+          uses: actions/setup-java@v2
+          with:
+            java-version: '11'
+            distribution: 'adopt'
 
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      - name: Integration Tests
-        run: ${gradlew} integrationTest
-        
-      - name: Test marketplace action
-        uses: simple-elf/allure-report-action@master
-        if: always()
-        id: allure-report
-        with:
-          allure_results: build/allure-results
-          gh_pages: gh-pages
-          allure_report: allure-report
-          allure_history: allure-history
-        
-        
+        - name: Run checkstyle
+          run: |
+            ${gradlew} check
