Incluindo novos comandos na action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,9 @@ jobs:
       - name: Run checkstyle
         run: |
           ${gradlew} check
+
+      - name: teste de unidade
+        run: ${gradlew} test -x integrationTest
+
+      - name:
+        run: ${gradlew} integrationTest
