--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches: [ aula-api ]
 
 jobs:
-  laranja:
+  analise-estatica:
     runs-on: ubuntu-latest
     env:
       ACTIONS_ALLOW_UNSECURE_COMMANDS: true
@@ -24,12 +24,50 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
 
-      - name: Run checkstyle
+      - name: análise estática de código
         run: |
-          ${gradlew} check
+          ${gradlew} check -x test -x integrationTest
+
+  testes-de-unidade:
+    runs-on: ubuntu-latest
+    env:
+      ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+      gradlew: "./gradlew"
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
 
       - name: teste de unidade
         run: ${gradlew} test -x integrationTest
 
-      - name:
+  teste-de-integracao:
+    runs-on: ubuntu-latest
+    env:
+      ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+      gradlew: "./gradlew"
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+
+      - name: teste de integração
         run: ${gradlew} integrationTest
