--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,32 @@ on:
     branches: [ aula-api ]
 
 jobs:
+  construcao:
+    runs-on: ubuntu-latest
+    env:
+      ACTIONS_ALLOW_UNSECURE_COMMANDS: true
+      gradlew: "./gradlew"
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+
+      - name: construir
+        run: |
+          ${gradlew} build -x check -x test -x integrationTest
+          
+
   analise-estatica:
+    needs: construcao
     runs-on: ubuntu-latest
     env:
       ACTIONS_ALLOW_UNSECURE_COMMANDS: true
@@ -52,7 +77,6 @@ jobs:
         run: ${gradlew} test -x integrationTest
 
   teste-de-integracao:
-    needs: testes-de-unidade
     runs-on: ubuntu-latest
     env:
       ACTIONS_ALLOW_UNSECURE_COMMANDS: true
